Update setup.cfg to reflect README name and format change

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ version = attr:unf.__version__
 author = Christian Haselgrove
 author_email = christian.haselgrove@umassmed.edu
 description = Universal Numeric Fingerprints
-long_description = file: README.rst
-long_description_content_type = text/x-rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/chaselgrove/python-unf
 
 classifiers =
