Update tox.ini for better coverage across Python versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,15 @@
+# We test all functionality (including that for optional packages) with all 
+# supported versions of Python and the missing-package functionality with 
+# the default version of Python.
+
 [tox]
-env_list = py{39,310,311,312,313}
+env_list = py{39,310,311,312,313}, no-optional-packages
 
 [testenv]
 deps = numpy
 commands = python3 -m unittest -vb tests
+
+[testenv:no-optional-packages]
+deps = 
 
 # eof
