--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ classifiers =
     Topic :: Scientific/Engineering
 
 [options]
-packages = unf
+py_modules = unf
 python_requires = >=3.9
 
 # eof
