Add pandas support

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@
 env_list = py{39,310,311,312,313}, no-optional-packages
 
 [testenv]
-deps = numpy
+deps = 
+    numpy
+    pandas
 commands = python3 -m unittest -vb tests
 
 [testenv:no-optional-packages]
