--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
-    Programming Language :: Python
+    Programming Language :: Python :: 3
     Topic :: Scientific/Engineering
 
 [options]
